# vp-link

./: .gitignore  TODO.md  install.sh  vp-link-status.md  vp-sync-status.md
deploy/autostart/: vp-rcvr-tray.desktop  vp-sndr-tray.desktop
deploy/scripts/: vp-link-stop.sh  vp-rcvr-prestart.sh  vp-rcvr-start.sh  vp-sndr-start.sh
deploy/systemd/: vp-rcvr.service  vp-sndr.service
vp-rcvr/: Cargo.toml  README.md  kill_cleanup.sh  receiver.py  start_debug.sh  start_obs_bridge.sh  vp-link.sdp
vp-rcvr/src/: main.rs
vp-sndr/: Cargo.toml  README.md  best.sh  kill_cleanup.sh  reset_beta_loopback.sh  sender.py  start_debug.sh  start_sender.sh
vp-sndr/src/: main.rs
vp-test/: Cargo.toml  README.md
vp-test/src/: main.rs
